[gd_scene load_steps=18 format=2]

[ext_resource path="res://action/Knockdown.gd" type="Script" id=1]
[ext_resource path="res://sfx/grab.wav" type="AudioStream" id=4]
[ext_resource path="res://shader/silouette.shader" type="Shader" id=5]
[ext_resource path="res://sfx/whiff_light2.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/thud.wav" type="AudioStream" id=18]
[ext_resource path="res://sfx/slap.wav" type="AudioStream" id=19]
[ext_resource path="res://action/Recover.gd" type="Script" id=20]
[ext_resource path="res://sfx/whiff_heavy.wav" type="AudioStream" id=23]
[ext_resource path="res://sfx/hit_heavy3.wav" type="AudioStream" id=24]
[ext_resource path="res://sfx/block_metal.wav" type="AudioStream" id=28]
[ext_resource path="res://action/AirHitstun.gd" type="Script" id=35]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=42]
[ext_resource path="res://character/Character.gd" type="Script" id=47]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/modulate = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 100 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 115 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 22 )

[node name="Player" type="KinematicBody2D" groups=["rollback"]]
material = SubResource( 1 )
script = ExtResource( 47 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -100 )
shape = SubResource( 2 )

[node name="Pivot" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 0, -128 )

[node name="Hurtbox" parent="Pivot" instance=ExtResource( 42 )]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hurtbox"]
shape = SubResource( 3 )

[node name="Hurtbox2" parent="Pivot" instance=ExtResource( 42 )]
visible = false

[node name="HurtboxShape" type="CollisionShape2D" parent="Pivot/Hurtbox2"]
position = Vector2( 9, 99 )
shape = SubResource( 4 )

[node name="Stand" type="Node2D" parent="Pivot"]
use_parent_material = true

[node name="Crouch" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="Air" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="Jump" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="Block" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="CrouchBlock" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="Hitstun" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="CrouchHitstun" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="AirHitstun" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true
script = ExtResource( 35 )

[node name="Knockdown" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true
script = ExtResource( 1 )

[node name="KO" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="Recover" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true
script = ExtResource( 20 )

[node name="5A" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="5B" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="5C" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="2A" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="2B" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="2C" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="JA" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="JB" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="JC" type="Node2D" parent="Pivot"]
visible = false
use_parent_material = true

[node name="TimerStun" type="Timer" parent="."]
one_shot = true

[node name="TimerHitstop" type="Timer" parent="."]
one_shot = true

[node name="TimerSpecialRegen" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Actions" type="AnimationPlayer" parent="."]

[node name="SFX" type="Node2D" parent="."]

[node name="WhiffLight" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
pitch_scale = 1.1

[node name="WhiffMed" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 23 )
pitch_scale = 0.8

[node name="WhiffHeavy" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 23 )

[node name="Hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 19 )
volume_db = -1.0

[node name="HitHeavy" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 24 )

[node name="Block" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 28 )

[node name="Knockdown" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 18 )

[node name="Grab" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )

[connection signal="timeout" from="TimerStun" to="." method="stun_end"]
[connection signal="timeout" from="TimerHitstop" to="." method="hitstop_end"]
[connection signal="timeout" from="TimerSpecialRegen" to="." method="special_regen_on"]
[connection signal="animation_finished" from="Actions" to="." method="action_end"]
